--- a/index.html
+++ b/index.html
@@ -420,7 +420,7 @@ My approach combines creativity with functionality, turning complex ideas into s
                     <div class="single-services text-center item">
                             <div class="services-icon">
                                 <!-- <i class="fas fa-brain"></i> -->
-                                <i class="fa-brands fa-php"></i>
+                                <i class="fa-brands fa-uiux"></i>
                             </div>
                             <div class="services-content">
                                 <h3>UI UX Design </h3> 
