--- a/index.html
+++ b/index.html
@@ -420,7 +420,7 @@ My approach combines creativity with functionality, turning complex ideas into s
                     <div class="single-services text-center item">
                             <div class="services-icon">
                                 <!-- <i class="fas fa-brain"></i> -->
-                                <i class="fa-solid fa-paint-brush"></i>
+                                <i class="https://github.com/Asadsiya03101/portfolio/blob/main/images/home/ui-ux%20(1).png"></i>
                             </div>
                             <div class="services-content">
                                 <h3>UI UX Design </h3> 
