--- a/index.html
+++ b/index.html
@@ -430,7 +430,7 @@ My approach combines creativity with functionality, turning complex ideas into s
                     <div class="single-services text-center item">
                             <div class="services-icon">
                                 <!-- <i class="fab fa-java"></i> -->
-                                <i class="fa-brands fa-js"></i>
+                                <i class""></i>
                             </div>
                             <div class="services-content">
                                 <h3>SQA Engineer</h3> 
